--- a/.github/workflows/mayhem.yml
+++ b/.github/workflows/mayhem.yml
@@ -41,7 +41,7 @@ jobs:
       with:
         context: .
         push: true
-        file: fuzz/Dockerfile
+        file: mayhem/Dockerfile
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
     outputs:
@@ -54,9 +54,9 @@ jobs:
       fail-fast: false
       matrix:
         mayhemfile:
-        - fuzz/mayhemfiles/Mayhemfile_lc
-        - fuzz/mayhemfiles/Mayhemfile_lc_byte
-        - fuzz/mayhemfiles/Mayhemfile_enc_dec
+        - mayhem/lc.mayhemfile
+        - mayhem/lc_byte.mayhemfile
+        - mayhem/enc_dec.mayhemfile
     steps:
     - uses: actions/checkout@v3
     - name: Start analysis for ${{ matrix.mayhemfile }}
